--- a/ibomma.css
+++ b/ibomma.css
@@ -7,7 +7,7 @@ body{
 /* header section */
 .header{
 	background:#252525;
-	margin-bottom:50px;
+	margin-bottom:2%;
 	display:flex;
 	justify-content:space-between;
 	padding:15px 25px;
@@ -35,23 +35,20 @@ body{
 /* slogan section */
 .slogon{
 	text-align:center;
-	margin-bottom:60px;
+	margin-bottom:10%;
 	color:#eee;
 }
 .slogon div{
 	font-size:250%;
-	font-family:Tahoma;
-	
+	font-family:Tahoma;	
 }
 .slogon p{
 	color:#ddd;
-	font-size:110%;
-	
-	
+	font-size:105%;
 }
 /* footer section */
 .footer{
-	background:#333;
+	background:#252525;
 	color:#ddd;
 	padding:40px 35px;
 	display:flex;
@@ -68,8 +65,8 @@ body{
 	grid-template-rows:auto auto auto auto;
 	/* column-gap:10px;
 	row-gap:10px; */
-	grid-gap:10px;
-	margin-bottom:40px;
+	grid-gap:20px 10px;
+	margin:auto;
 	transition:800ms linear;
 }
 .grid-box img{
@@ -88,7 +85,7 @@ body{
 .grid-box div:last-child{
   color:#ddd;
   background:#2e2e2e;
-  /* display:inline-block; */
+  display:inline-block;
   padding:2px;
 }
 
@@ -96,11 +93,10 @@ body{
 	color:#33ffff;
 }
 .grid-box .grid-item div:last-child{
-	color:#ffff33;
-	/* color:#ddd; */
+	color:#ffff33;  /* color:#ddd; */
 	background:#2e2e2e;
-  display:inline-block;
-  padding:2px;
+ 	 display:inline-block;
+ 	 padding:2px;
 
 }
 .grid-box:hover > :not(:hover){
