--- a/ibomma.css
+++ b/ibomma.css
@@ -66,7 +66,7 @@ body{
 	/* column-gap:10px;
 	row-gap:10px; */
 	grid-gap:20px 10px;
-	margin:auto;
+	margin-bottom:40px;
 	transition:800ms linear;
 }
 .grid-box img{
