--- a/ibomma.css
+++ b/ibomma.css
@@ -60,8 +60,10 @@ body{
 	width:90%;
 	margin:auto;
 	display:grid; /* 20rX1c */
-	/* grid-template-columns:300px 300px 300px 400px; OR */
-	grid-template-columns:auto auto auto auto auto; 
+	/* grid-template-columns:300px 300px 300px 400px; 
+				OR */
+	/* grid-template-columns:auto auto auto auto auto; */
+	grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
 	grid-template-rows:auto auto auto auto;
 	/* column-gap:10px;
 	row-gap:10px; */
